crates/biome_cli/tests/snapshots/main_cases_reporter_gitlab/reports_diagnostics_gitlab_format_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --reporter=gitlab --max-diagnostics=200 main.ts index.ts
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
[
  {
    "description": "Formatter would have printed the following content:",
    "check_name": "format",
    "fingerprint": "15136662709985741127",
    "severity": "critical",
    "location": {
      "path": "index.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "description": "Formatter would have printed the following content:",
    "check_name": "format",
    "fingerprint": "8454297847249184653",
    "severity": "critical",
    "location": {
      "path": "main.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
```
